--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -10,4 +10,6 @@ html(lang="en")
                 li
                     a(href="/") HOME
                 li
-                    a(href="/bread") BREADs
+                    a(href="/bread") BREAD
+
+        block content
